feat: content script create summary component

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "name in manifest.json",
+  "name": "ChatGPT对话目录导航地图",
   "description": "description in manifest.json",
   "options_ui": {
     "page": "src/pages/options/index.html"
@@ -11,9 +11,7 @@
       "32": "icon-32.png"
     }
   },
-  "chrome_url_overrides": {
-    "newtab": "src/pages/newtab/index.html"
-  },
+
   "icons": {
     "128": "icon-128.png"
   },
@@ -23,9 +21,7 @@
   "content_scripts": [
     {
       "matches": [
-        "http://*/*",
-        "https://*/*",
-        "<all_urls>"
+        "https://chatgpt.com/*"
       ],
       "js": [
         "src/pages/content/index.tsx"
