--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "type": "module",
   "dependencies": {
+    "lodash": "^4.17.21",
+    "mdast-util-from-markdown": "^2.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "webextension-polyfill": "^0.12.0"
@@ -25,6 +27,8 @@
     "@crxjs/vite-plugin": "^2.0.0-beta.32",
     "@tailwindcss/vite": "^4.1.4",
     "@types/chrome": "^0.0.315",
+    "@types/mdast": "^4.0.4",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
