feat: integrate heroui

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@heroui/react": "2.8.0-beta.7",
+    "framer-motion": "^11.9.0",
     "lodash": "^4.17.21",
     "mdast-util-from-markdown": "^2.0.2",
     "react": "^19.1.0",
@@ -27,8 +29,8 @@
     "@crxjs/vite-plugin": "^2.0.0-beta.32",
     "@tailwindcss/vite": "^4.1.4",
     "@types/chrome": "^0.0.315",
-    "@types/mdast": "^4.0.4",
     "@types/lodash": "^4.17.17",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
@@ -44,7 +46,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "fs-extra": "^11.3.0",
     "nodemon": "^3.1.9",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "vite": "^6.1.0",
